force-app/main/default/objects/AdhocSchedule__c/AdhocSchedule__c.object-meta.xml
<CustomObject>
    <description>Records used by the Adhoc Scheduler utility to define ad-hoc jobs</description>
    <label>AdhocSchedule</label>
    <nameField>
        <label>AdhocSchedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdhocSchedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>