force-app/main/default/objects/AdhocSchedule__c/fields/Apex__c.field-meta.xml
<CustomField>
    <fullName>Apex__c</fullName>
    <description>The apex code which will be executed when the job is run</description>
    <inlineHelpText>The apex code which will be executed when the job is run</inlineHelpText>
    <label>Apex</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>