force-app/main/default/objects/AdhocSchedule__c/fields/CronString__c.field-meta.xml
<CustomField>
    <fullName>CronString__c</fullName>
    <description>Cron string to be used when scheduling the job.</description>
    <inlineHelpText>See syntax help at https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm</inlineHelpText>
    <label>Cron String</label>
    <length>150</length>
    <type>Text</type>
</CustomField>