force-app/main/default/objects/AdhocSchedule__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this adhoc scheduled job enabled?</description>
    <inlineHelpText>Check to enable this adhoc scheduled job. Uncheck to disable.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>