force-app/main/default/objects/AdhocSchedule__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>General notes about this adhoc job</description>
    <inlineHelpText>General notes about this adhoc job</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>