force-app/main/default/objects/AdhocSchedule__c/fields/ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledJobId__c</fullName>
    <description>The apex code which will be executed when the job is run</description>
    <inlineHelpText>The apex code which will be executed when the job is run</inlineHelpText>
    <label>ScheduledJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>