force-app/main/default/objects/AdhocSchedule__c/listViews/All_with_details.listView-meta.xml
<ListView>
    <fullName>All_with_details</fullName>
    <columns>NAME</columns>
    <columns>CronString__c</columns>
    <columns>ScheduledJobId__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with details</label>
</ListView>